fixed the overflowing texts

--- a/src/styles/responsive.css
+++ b/src/styles/responsive.css
@@ -963,12 +963,39 @@
     }
 
     .description-texts-container{
-        /* background-color: red; */
-        width: 300px;
         height: 630px;
-        box-shadow: rgba(0, 0, 0, 0.35) 0px 0px 0.8px;
-        /* animation: testest2 1s ease-in; */
     }
 
+    .content-project-summary_one{
+        font-size: 13px;
+    }
+
+    .content-project__buttons{
+        bottom: -200px;
+    }
+
+    .twoBtns{
+        bottom: -15px;
+    }
+
+    .threeBtns{
+        bottom: -187px;
+    }
+
+    .fourBtns{
+        bottom: -235px;
+    }
+
+    .fiveBtns{
+        bottom: -102px;
+    }
+
+    .sixBtns{
+        bottom: -238px;
+    }
+
+    .sevenBtns{
+        bottom: -128px;
+    }
 
 }
